turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:21: error: ';' expected but ',' found.
      couleur,mouvement,state = rule(state)(i)
             ^