turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;
val SToP = 0;
val AVANCE = 1;
val GAUCHE = 2;
val DEMITOUR = 4;
val DROITE = 8;



def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
    /* Your code comes here */
  var couleur =0
  var mouvement = 0
  for (i<- 0 to colors.length -1) {
    if (colors(i) == getCouleurSol()) {
      baisseBrosse()
      /*if (i==colors.length -1) setCouleurBrosse(colors(0))
      else setCouleurBrosse(colors(i+1))*/
      couleur,mouvement,state = rule(state)(i)
      setCouleurBrosse(couleur)
      leveBrosse
      
      if (mouvement == DROITE) {
        droite()
        avance()
      }
      else if (mouvement == GAUCHE){
        gauche()
        avance()
      }
      else if (mouvement == AVANCE){
        avance()
      }
      else if (mouvement == DEMITOUR){
        gauche()
        gauche()
        avance()
      }
      else
      return
  
}
  }
}

